syntax = "proto3";

package api.team.v1;

option go_package = "staff/api/team/v1;v1";
option java_multiple_files = true;
option java_package = "api.team.v1";

service Team {
	rpc CreateTeam (CreateTeamRequest) returns (CreateTeamReply);
	rpc UpdateTeam (UpdateTeamRequest) returns (UpdateTeamReply);
	rpc DeleteTeam (DeleteTeamRequest) returns (DeleteTeamReply);
	rpc RecoveryTeam (RecoveryTeamRequest) returns (RecoveryTeamReply);
	rpc ListTeam (ListTeamRequest) returns (ListTeamReply);
}

message CreateTeamRequest {}
message CreateTeamReply {}

message UpdateTeamRequest {}
message UpdateTeamReply {}

message DeleteTeamRequest {}
message DeleteTeamReply {}

message RecoveryTeamRequest {}
message RecoveryTeamReply {}

message ListTeamRequest {}
message ListTeamReply {}